--- a/index.html
+++ b/index.html
@@ -1,38 +1,66 @@
-<html>
-    <head>
-        <title>Hallo HTML</title>
-        <meta charset= "utf-8">
-        <meta name = "nama" content="Billy Gunawan">
-        <meta name = "npm" content = "1923250021">
-    </head>
-    <body>
-        <h1>Your Life Your Choices</h1>
+</html> 
+   <main>
+        <div class="hanya tipuan">
+            <h1>HALLO MAHASISWA MDP<span>.</span></h1>
+            <h2>Ayo Belajar Coding</h2>
+            <link rel="stylesheet" href ="cssbro.css">
+        </div>
+        <div class="contents">
+            <h3 class="section-title">Pelajaran</h3>
 
-        <p>Your Life Your Choices</H1></p>
-        <a href = "http://mdp.ac.id">Web MDP</a><br/>
-        <a href = "Halaman 2.html">Ke Halaman 2</a>
+            <div class="contents-item">
+                <div class="contents-img htmlcss">
+                    <img src="https://cdn.discordapp.com/attachments/669931819184947213/762633313688616960/htmlcss.png" alt="HTML dan CSS">
+                </div>
+                <p>HTML Dan CSS</p>
+            </div> 
 
-        <img src = "https://spon1.mdp.ac.id/pluginfile.php/1564/user/icon/moove/f1?rev=2338">
+            <div class="contents-item">
+                <div class="contents-img php">
+                    <img src="https://cdn.discordapp.com/attachments/669931819184947213/762617386821091349/php_logo.png " alt="PHP">
+                    </div>
+                <p>PHP</p>
+            </div>
 
-        <ul type = "square">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JS</li>
-            <li>NODE JS</li>
-            <li>VUE JS</li>
-        </ul>
+            <div class="contents-item">
+                <div class="contents-img java">
+                    <img src="https://cdn.discordapp.com/attachments/669931819184947213/762617384607416320/java_logo.png" alt="Ruby">
+                </div>
+                <p>Java</p>
+            </div>
 
-        <ol type = "I" start = "5" reversed>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JS</li>
-            <li>NODE JS</li>
-            <li>VUE JS</li>
-        </ul>
-        
+            <div class="contents-item">
+                <div class="contents-img python">
+                    <img src="https://cdn.discordapp.com/attachments/669931819184947213/762617386943381524/python_logo.png" alt="Swift">
+                </div>
+                <p>Python</p>
+            </div>
+        </div>
 
-        <img src = "https://compfest.files.wordpress.com/2019/09/main-image-compfest-artikel.jpg?w=800">
-        
+        <div class="contact">
+            <h3 class="section-title">Hubungi Kami</h3>
+            <form action="" method="post">
+                <p>Email (wajib diisi) *</p>
+                <input type="email" name="email" id="email" placeholder="Masukan email anda">
+                <p>Pesan (wajib diisi) *</p>
+                <textarea placeholder="Masukan pesan anda"></textarea>
+                <p class="txt-red">* Bidang yang wajib diisi</p>
+                <input type="submit" value="Kirim" class="contact-submit">
+                <br>
+        </form>
+        </div>
+    </main>
 
-    </body>
+    <footer>
+        <div class="footer-logo">MDP</div>
+        <div class="footer-nav">
+            <ul>
+                <li>Tentang</li>
+                <li>Pelajaran</li>
+                <li>Hubungin Kami</li>
+            </ul>
+        </div>
+    </footer>
+
+</body>
 </html>
